--- a/collab-system-fe/project.html
+++ b/collab-system-fe/project.html
@@ -142,6 +142,34 @@
           </div>
         </div>
             <div id="whiteboardWrapper" style="display: none; flex: 1; flex-direction: column;">
+              <div id="whiteboard-toolbar" class="mb-2 d-flex align-items-center flex-wrap">
+
+        <button id="toolBrush" class="btn btn-sm btn-light border mr-1">
+            <i class="fas fa-paint-brush"></i>
+        </button>
+
+        <button id="toolEraser" class="btn btn-sm btn-light border mr-3">
+            <i class="fas fa-eraser"></i>
+        </button>
+
+        <div class="mr-3">
+            <label class="small mb-0">Size</label>
+            <input id="brushSize" type="range" min="1" max="40" value="5" />
+        </div>
+
+        <div class="mr-3">
+            <label class="small mb-0">Color</label>
+            <input id="brushColor" type="color" value="#000000" />
+        </div>
+
+        <button id="toolBucket" class="btn btn-sm btn-light border mr-3">
+            <i class="fas fa-fill-drip"></i>
+        </button>
+
+        <button id="clearBoardBtn" class="btn btn-sm btn-outline-danger ml-auto">
+            <i class="fas fa-trash"></i> Clear
+        </button>
+    </div>
         <div class="d-flex justify-content-between align-items-center mb-2">
             <h5 id="boardTitle">Select a whiteboard</h5>
             <div id="whiteboardStatus" class="text-muted small">Not connected</div>
